--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,24 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+li {
+  list-style: none;
+}
+
+h1 {
+  color: rgb(182, 28, 97);
+}
+
+strong {
+  color: rgb(182, 28, 97);
+}
+
+p {
+  color: rgb(210, 88, 143);
+}
+
+a {
+  color: rgb(182, 28, 97);
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -12,20 +27,12 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+body {
+  background-color: #ffff;
+  color: rgb(210, 88, 143);
 }
-
-.App-link {
-  color: #61dafb;
+.header {
+  text-align: center;
 }
 
 @keyframes App-logo-spin {
